<resources>
    <string name="app_name">Class Planner</string>
    <string name="uptodate">Em dia</string>
    <string name="group_name">Nome</string>
    <string name="group_time">Horário (HH:MM)</string>
    <string name="group_start_date">Data de início (DD/MM/AAAA)</string>
    <string name="group_class_count">Número de aulas</string>
    <string name="new_group">Criar turma</string>
    <string name="class_planned">Aula planejada</string>
    <string name="material_sent">Material enviado</string>
    <string name="attendance_taken">Chamada feita</string>
    <string name="resource_name">Nome</string>
    <string name="resource_url">URL</string>
    <string name="apply_resource_globally">Aplicar a todas as aulas</string>
    <string name="register">Criar conta</string>
    <string name="login">Fazer login</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="action_sign_out">Sair</string>
    <string name="group_day_of_week_and_time">%1$s, %2$s</string>
    <string name="group_next_class">Próxima aula: %1$s</string>
    <string name="class_day_and_month">%1$d %2$s</string>
    <string name="delete">Excluir</string>
    <string name="channel_name">Lembrete</string>
    <string name="channel_description">Aula não planejada</string>
</resources>